tests/NormalTests/paczka1/small_fuzzy/65034820.err
Error in line 3: CKKO4 S235 45,4
Error in line 2: CQ1EA2e S507 72,2
Error in line 4: CKKO4 S626 79,7
Error in line 6: CQ1EA2e S626 45,7
Error in line 15: CQ1EA2e S235 24,6
